feat: add template image

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -17,6 +17,7 @@ export const theme = myTheme
 //export const theme = smartTheme;
 
 import caLayers from "./diagrams/caLayers.svg";
+import template from "./diagrams/template.svg";
 
 <Head>
   <title>Чистая Архитектура для Счётчика</title>
@@ -29,6 +30,14 @@ import caLayers from "./diagrams/caLayers.svg";
 ---
 
 <Image src={caLayers} style={{ width: '101vw', height: '100vh'}}/>
+
+<Notes>
+...
+</Notes>
+
+---
+
+<Image src={template} style={{ width: '101vw', height: '100vh'}}/>
 
 <Notes>
 ...
