--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -16,6 +16,12 @@ import myTheme from './lib/theme'
 export const theme = myTheme
 //export const theme = smartTheme;
 
+import caBaseSoftware from "./diagrams/caBaseSoftware.svg";
+import caBase0 from "./diagrams/caBase1.svg";
+import caBase from "./diagrams/caBase.svg";
+
+import caLayersUsual from "./diagrams/caLayersUsual.svg";
+
 import caLayers from "./diagrams/caLayers.svg";
 import template from "./diagrams/template.svg";
 
@@ -23,29 +29,52 @@ import template from "./diagrams/template.svg";
   <title>Чистая Архитектура для Счётчика</title>
 </Head>
 
-# Чистая Архитектура для Счётчика
-
-[Alexander Lapygin](https://github.com/AlexanderLapygin)
+# Чистая Архитектура для счётчика
 
 ---
 
-<Image src={caLayers} style={{ width: '101vw', height: '100vh'}}/>
-
-<Notes>
-...
-</Notes>
+<Image src={caBase} style={{ width: '100vw', height: '100vh'}}/>
 
 ---
 
-<Image src={template} style={{ width: '101vw', height: '100vh'}}/>
+<Image src={caBaseSoftware} style={{ width: '100vw', height: '100vh'}}/>
 
-<Notes>
-...
-</Notes>
+---
+
+<Image src={caBase0} style={{ width: '100vw', height: '100vh'}}/>
+
+---
+
+<CodeSurferColumns themes={[myTheme]}>
+
+<Step>
+
+```ts file=../../src/index.tsx title="Counter"
+```
+
+</Step>
+
+</CodeSurferColumns>
+
+---
+
+<Image src={caLayers} style={{ width: '100vw', height: '100vh'}}/>
+
+---
+
+<Image src={caLayersUsual} style={{ width: '100vw', height: '100vh'}}/>
+
+---
+
+<Image src={template} style={{ width: '100vw', height: '100vh'}}/>
 
 ---
 
 # СПАСИБО ЗА ВНИМАНИЕ!
+
+---
+
+[Alexander Lapygin](https://github.com/AlexanderLapygin)
 
 ---
 
