docs: deck update

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -16,6 +16,10 @@ import myTheme from './lib/theme'
 export const theme = myTheme
 //export const theme = smartTheme;
 
+
+import softspidersLogo from "./diagrams/softspidersLogo.png";
+import jepriaLogo from "./diagrams/jepriaLogo.png";
+
 import caBaseSoftware from "./diagrams/caBaseSoftware.svg";
 import caBase0 from "./diagrams/caBase1.svg";
 import caBase from "./diagrams/caBase.svg";
@@ -26,10 +30,35 @@ import caLayers from "./diagrams/caLayers.svg";
 import template from "./diagrams/template.svg";
 
 <Head>
-  <title>Чистая Архитектура для Счётчика</title>
+  <title>Счётчик на Чистой Архитектуре</title>
 </Head>
 
-# Чистая Архитектура для счётчика
+---
+
+![](https://avatars0.githubusercontent.com/u/58282225?s=400&u=1877c06c2227806421484a23980e2ca123e3fa32&v=4)
+
+![](https://avatars2.githubusercontent.com/u/47443457?s=400&u=dea74cc01b657d63400a5c36ea0b50975d7f7ef4&v=4)
+
+---
+
+<Image src={softspidersLogo} style={{ width: '10vw', height: '20vh'}}/>
+
+<Image src={jepriaLogo} style={{ width: '10vw', height: '20vh'}}/>
+
+---
+
+# Счётчик на Чистой Архитектуре
+# Стартер
+
+---
+
+# Главные свойства стартера
+
+- *Clean Architecture*
+- *React*
+- *TypeScript*
+- *react-testing-library*
+- *REST API*
 
 ---
 
