docs: deck update

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -21,8 +21,9 @@ import softspidersLogo from "./diagrams/softspidersLogo.png";
 import jepriaLogo from "./diagrams/jepriaLogo.png";
 
 import caBaseSoftware from "./diagrams/caBaseSoftware.svg";
-import caBase0 from "./diagrams/caBase1.svg";
 import caBase from "./diagrams/caBase.svg";
+import caBase0 from "./diagrams/caBase0.svg";
+import caBase1 from "./diagrams/caBase1.svg";
 
 import caLayersUsual from "./diagrams/caLayersUsual.svg";
 
@@ -41,9 +42,16 @@ import template from "./diagrams/template.svg";
 
 ---
 
+<table>
+<tr>
+<td>
 <Image src={softspidersLogo} style={{ width: '10vw', height: '20vh'}}/>
-
+</td>
+<td>
 <Image src={jepriaLogo} style={{ width: '10vw', height: '20vh'}}/>
+</td>
+</tr>
+</table>
 
 ---
 
@@ -71,6 +79,10 @@ import template from "./diagrams/template.svg";
 ---
 
 <Image src={caBase0} style={{ width: '100vw', height: '100vh'}}/>
+
+---
+
+<Image src={caBase1} style={{ width: '100vw', height: '100vh'}}/>
 
 ---
 
