--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -24,6 +24,7 @@ import caBaseSoftware from "./diagrams/caBaseSoftware.svg";
 import caBase from "./diagrams/caBase.svg";
 import caBase0 from "./diagrams/caBase0.svg";
 import caBase1 from "./diagrams/caBase1.svg";
+import caBase1Png from "./diagrams/caBase1.png";
 
 import caLayersUsual from "./diagrams/caLayersUsual.svg";
 
@@ -56,7 +57,7 @@ import template from "./diagrams/template.svg";
 ---
 
 # Счётчик на Чистой Архитектуре
-# Стартер
+## Стартер
 
 ---
 
@@ -70,19 +71,32 @@ import template from "./diagrams/template.svg";
 
 ---
 
-<Image src={caBase} style={{ width: '100vw', height: '100vh'}}/>
+<Image src={caBase} style={{ width: '101vw', height: '100vh'}}/>
 
 ---
 
-<Image src={caBaseSoftware} style={{ width: '100vw', height: '100vh'}}/>
+<Image src={caBaseSoftware} style={{ width: '101vw', height: '100vh'}}/>
 
 ---
 
-<Image src={caBase0} style={{ width: '100vw', height: '100vh'}}/>
+<Image src={caBase0} style={{ width: '101vw', height: '100vh'}}/>
 
 ---
 
-<Image src={caBase1} style={{ width: '100vw', height: '100vh'}}/>
+## Title
+
+<Image src={caBase0} style={{ width: '69vw', height: '68vh'}}/>
+
+### Subtitle
+
+---
+
+## Title
+
+<Image src={caBase1Png} style={{ width: '69vw', height: '68vh'}}/>
+
+
+### Subtitle
 
 ---
 
@@ -99,15 +113,29 @@ import template from "./diagrams/template.svg";
 
 ---
 
-<Image src={caLayers} style={{ width: '100vw', height: '100vh'}}/>
+<Image src={caLayers} style={{ width: '101vw', height: '100vh'}}/>
 
 ---
 
-<Image src={caLayersUsual} style={{ width: '100vw', height: '100vh'}}/>
+<Image src={caLayersUsual} style={{ width: '101vw', height: '100vh'}}/>
+
+<Notes>
+
+Схема демонстрирует распространённый, типовой, но всего лишь пример проекции идеи *Чистой архитектуры* на один из
+вариантов множества слоёв программной системы.
+
+Много копий ломается по поводу терминологии - названий и толкований смысла каждого из слоёв.
+
+Часто эти споры мотивируется добрыми пожеланиями, например, как спроецировать идею *правила зависимостей* на то или иное
+конкретное архитектурное решение. И это, конечно, тоже бывает важно.
+
+Но в этих битвах зачастую теряется суть идеи.
+
+</Notes>
 
 ---
 
-<Image src={template} style={{ width: '100vw', height: '100vh'}}/>
+<Image src={template} style={{ width: '102vw', height: '100vh'}}/>
 
 ---
 
