--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -16,20 +16,21 @@ import myTheme from './lib/theme'
 export const theme = myTheme
 //export const theme = smartTheme;
 
-
-import softspidersLogo from "./diagrams/softspidersLogo.png";
-import jepriaLogo from "./diagrams/jepriaLogo.png";
+import template from "./diagrams/template.svg";
 
 import caBaseSoftware from "./diagrams/caBaseSoftware.svg";
 import caBase from "./diagrams/caBase.svg";
 import caBase0 from "./diagrams/caBase0.svg";
 import caBase1 from "./diagrams/caBase1.svg";
-import caBase1Png from "./diagrams/caBase1.png";
 
 import caLayersUsual from "./diagrams/caLayersUsual.svg";
 
 import caLayers from "./diagrams/caLayers.svg";
-import template from "./diagrams/template.svg";
+import caLayersCut from "./diagrams/caLayersCut.svg";
+import caLayersNet from "./diagrams/caLayersNet.svg";
+
+import caOSI from "./diagrams/caOSI.svg";
+import caOSI1 from "./diagrams/caOSI1.svg";
 
 <Head>
   <title>Счётчик на Чистой Архитектуре</title>
@@ -40,19 +41,6 @@ import template from "./diagrams/template.svg";
 ![](https://avatars0.githubusercontent.com/u/58282225?s=400&u=1877c06c2227806421484a23980e2ca123e3fa32&v=4)
 
 ![](https://avatars2.githubusercontent.com/u/47443457?s=400&u=dea74cc01b657d63400a5c36ea0b50975d7f7ef4&v=4)
-
----
-
-<table>
-<tr>
-<td>
-<Image src={softspidersLogo} style={{ width: '10vw', height: '20vh'}}/>
-</td>
-<td>
-<Image src={jepriaLogo} style={{ width: '10vw', height: '20vh'}}/>
-</td>
-</tr>
-</table>
 
 ---
 
@@ -68,6 +56,10 @@ import template from "./diagrams/template.svg";
 - *TypeScript*
 - *react-testing-library*
 - *REST API*
+
+---
+
+<Image src={template} style={{ width: '102vw', height: '100vh'}}/>
 
 ---
 
@@ -93,23 +85,10 @@ import template from "./diagrams/template.svg";
 
 ## Title
 
-<Image src={caBase1Png} style={{ width: '69vw', height: '68vh'}}/>
+<Image src={caBase1} style={{ width: '69vw', height: '68vh'}}/>
 
 
 ### Subtitle
-
----
-
-<CodeSurferColumns themes={[myTheme]}>
-
-<Step>
-
-```ts file=../../src/index.tsx title="Counter"
-```
-
-</Step>
-
-</CodeSurferColumns>
 
 ---
 
@@ -131,11 +110,52 @@ import template from "./diagrams/template.svg";
 
 Но в этих битвах зачастую теряется суть идеи.
 
+Выбранная здесь раскраска слоёв служит цели перенести фокус с архитектурных частностей на более существенные вещи.
+
+Слоёв может быть всего два, их число ничем не ограничено, и называться они могут как угодно.
+
+Более того - в разных частях этой фигуры может быть разное число слоёв (Иерархия слоёв - TBD) 
+ 
+...
+
+Мы тоже будем этим пользоваться
+
 </Notes>
 
 ---
 
-<Image src={template} style={{ width: '102vw', height: '100vh'}}/>
+<Image src={caLayersCut} style={{ width: '101vw', height: '100vh'}}/>
+
+---
+
+<Image src={caLayersNet} style={{ width: '101vw', height: '100vh'}}/>
+
+---
+
+<Image src={caOSI} style={{ width: '101vw', height: '100vh'}}/>
+
+---
+
+<Image src={caOSI1} style={{ width: '101vw', height: '100vh'}}/>
+
+<Notes>
+
+Метафора морских глубин - тем глубже, тем темнее и стабильнее
+
+</Notes>
+
+---
+
+<CodeSurferColumns themes={[myTheme]}>
+
+<Step>
+
+```ts file=../../src/index.tsx title="Counter"
+```
+
+</Step>
+
+</CodeSurferColumns>
 
 ---
 
