docs: deck update

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -168,8 +168,14 @@ import caOSIAppInterconnection from "./diagrams/caOSIAppInterconnection.svg";
 
 <Notes>
 
-У приложений два главных интерфейса взаимодействия. Один - высокоуровневый - между собой, другой - интерфейс
-взаимодействия с более низким, в данном случае, слоем *Presentation*. 
+У приложений есть два главных интерфейса взаимодействия. Один - высокоуровневый, в определённом смысле, виртуальный -
+между собой, другой интерфейс служит для взаимодействия с соседним более низким слоем, в данном случае, слоем
+*Presentation*.
+
+У остальных слоёв есть три интерфейса взаимодействия. Один - виртуальный - со слоем того же уровня на другом узле, и
+пара интерфейсов для взаимодействия с соседними слоями - нижним и верхним. 
+
+Обозначить различия и сходства с *распределённой ca-моделью*.
 
 </Notes>
 
