docs: deck update

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -175,7 +175,8 @@ import caOSIAppInterconnection from "./diagrams/caOSIAppInterconnection.svg";
 У остальных слоёв есть три интерфейса взаимодействия. Один - виртуальный - со слоем того же уровня на другом узле, и
 пара интерфейсов для взаимодействия с соседними слоями - нижним и верхним. 
 
-Обозначить различия и сходства с *распределённой ca-моделью*.
+Обозначить различия и сходства с *распределённой ca-моделью клиент-сервисы*, где у клиента своя бизнес-логика, у сервиса
+- своя.
 
 </Notes>
 
