feat: add images

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -18,6 +18,11 @@ export const theme = myTheme
 
 import template from "./diagrams/template.svg";
 
+import packages from "./diagrams/packages.svg";
+import packagesDependencies from "./diagrams/packagesDependencies.svg";
+import packagesDependenciesFlowControl from "./diagrams/packagesDependenciesFlowControl.svg";
+import packagesDependenciesFlowControl1 from "./diagrams/packagesDependenciesFlowControl1.svg";
+
 <Head>
   <title>Счётчик на Чистой Архитектуре</title>
 </Head>
@@ -46,6 +51,22 @@ import template from "./diagrams/template.svg";
 ---
 
 <Image src={template} style={{ width: '102vw', height: '100vh'}}/>
+
+---
+
+<Image src={packages} style={{ width: '102vw', height: '100vh'}}/>
+
+---
+
+<Image src={packagesDependencies} style={{ width: '102vw', height: '100vh'}}/>
+
+---
+
+<Image src={packagesDependenciesFlowControl} style={{ width: '102vw', height: '100vh'}}/>
+
+---
+
+<Image src={packagesDependenciesFlowControl1} style={{ width: '102vw', height: '100vh'}}/>
 
 ---
 
