docs: add diagram

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -48,13 +48,37 @@ import packagesDependenciesFlowControl1 from "./diagrams/packagesDependenciesFlo
 - *react-testing-library*
 - *REST API*
 
+<Notes>
+Из свойств *Чистой Архитектуры* пока, наверное, только *Правило зависимостей*, реализуемое с использованием *Принципа
+Инверсии Зависимостей*, но это в ней главное.
+</Notes>
+
 ---
 
 <Image src={template} style={{ width: '102vw', height: '100vh'}}/>
 
+<Notes>
+Это шаблон слайда с заголовком и подписью
+</Notes>
+
 ---
 
 <Image src={packages} style={{ width: '102vw', height: '100vh'}}/>
+
+<Notes>
+
+Структура директорий (packages)
+
+Верхний уровень:
+- domain
+- ui
+- adapters
+- api
+
+*api*
+
+</Notes>
+
 
 ---
 
