docs: add images for climbers

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -34,7 +34,7 @@ import konyuhov61 from "./diagrams/konyuhov61.jpg";
 import konyuhov7 from "./diagrams/konyuhov7.jpg";
 import nakedInMountains from "./diagrams/nakedInMountains.jpg";
 
-
+import climbersBunch2 from "./diagrams/climbersBunch2.jpg";
 
 <Head>
   <title>Счётчик на Чистой Архитектуре</title>
@@ -90,6 +90,22 @@ import nakedInMountains from "./diagrams/nakedInMountains.jpg";
 ---
 
 <Image src={nakedInMountains} style={{ width: '60vw', height: '80vh'}}/>
+
+---
+
+<Image src={climbersBunch2} style={{ width: '60vw', height: '80vh'}}/>
+
+<Notes>
+
+"Но мы выбираем трудный путь..."
+
+На самом деле он оптимальный.
+
+Что мы оптимизируем ?
+
+Масштабирование во времени - устойчивость развития.
+
+</Notes>
 
 ---
 
@@ -152,9 +168,21 @@ import nakedInMountains from "./diagrams/nakedInMountains.jpg";
 
 <Image src={packagesDependenciesFlowControl} style={{ width: '102vw', height: '100vh'}}/>
 
+<Notes>
+
+Это вариант, когда сервис является частью приложения, его backend-составляющей. 
+
+</Notes>
+
 ---
 
 <Image src={packagesDependenciesFlowControl1} style={{ width: '102vw', height: '100vh'}}/>
+
+<Notes>
+
+Это вариант, когда сервис является частью приложения, его backend-составляющей. 
+
+</Notes>
 
 ---
 
