--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -18,10 +18,11 @@ export const theme = myTheme
 
 import template from "./diagrams/template.svg";
 
+import packagesClient0 from "./diagrams/packagesClient0.svg";
+import packagesClient from "./diagrams/packagesClient.svg";
 import packages from "./diagrams/packages.svg";
 import packagesDependencies from "./diagrams/packagesDependencies.svg";
 import packagesDependenciesFlowControl from "./diagrams/packagesDependenciesFlowControl.svg";
-import packagesDependenciesFlowControl1 from "./diagrams/packagesDependenciesFlowControl1.svg";
 
 import beach from "./diagrams/beach.jpg";
 import konyuhov1 from "./diagrams/konyuhov1.jpg";
@@ -135,10 +136,40 @@ import climbersBunch2 from "./diagrams/climbersBunch2.jpg";
 
 ---
 
-<Image src={template} style={{ width: '102vw', height: '100vh'}}/>
+<Image src={packagesClient0} style={{ width: '102vw', height: '100vh'}}/>
 
 <Notes>
-Это шаблон слайда с заголовком и подписью
+
+Здесь изображена структура директорий (packages) клиенского приложения, вполне обычная при разработке на принципах
+Чистой Архитектуры.
+
+- domain
+  - entities
+  - usecases
+- ui
+- adapters
+  - presenters
+  - gateways
+
+</Notes>
+
+---
+
+<Image src={packagesClient} style={{ width: '102vw', height: '100vh'}}/>
+
+<Notes>
+
+Здесь изображена структура директорий (packages) клиенского приложения, вполне обычная при разработке на принципах
+Чистой Архитектуры.
+
+- domain
+  - entities
+  - usecases
+- ui
+- adapters
+  - presenters
+  - gateways
+
 </Notes>
 
 ---
@@ -147,18 +178,9 @@ import climbersBunch2 from "./diagrams/climbersBunch2.jpg";
 
 <Notes>
 
-Структура директорий (packages)
-
-Верхний уровень:
-- domain
-- ui
-- adapters
-- api
-
-*api*
+Для полноты картины разместим на диаграмме серверную часть приложения
 
 </Notes>
-
 
 ---
 
@@ -167,16 +189,6 @@ import climbersBunch2 from "./diagrams/climbersBunch2.jpg";
 ---
 
 <Image src={packagesDependenciesFlowControl} style={{ width: '102vw', height: '100vh'}}/>
-
-<Notes>
-
-Это вариант, когда сервис является частью приложения, его backend-составляющей. 
-
-</Notes>
-
----
-
-<Image src={packagesDependenciesFlowControl1} style={{ width: '102vw', height: '100vh'}}/>
 
 <Notes>
 
@@ -210,3 +222,15 @@ import climbersBunch2 from "./diagrams/climbersBunch2.jpg";
 # Исходники этой презентации
 
 [https://github.com/softspiders/ca-react-rest-api-starter](https://github.com/softspiders/ca-react-rest-api-starter)
+
+---
+
+# Вспомогательные материалы
+
+---
+
+<Image src={template} style={{ width: '102vw', height: '100vh'}}/>
+
+<Notes>
+Это шаблон слайда с заголовком и подписью
+</Notes>
