docs: add Layer Module diagram

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -16,14 +16,6 @@ import myTheme from './lib/theme'
 export const theme = myTheme
 //export const theme = smartTheme;
 
-import template from "./diagrams/template.svg";
-
-import packagesClient0 from "./diagrams/packagesClient0.svg";
-import packagesClient from "./diagrams/packagesClient.svg";
-import packages from "./diagrams/packages.svg";
-import packagesDependencies from "./diagrams/packagesDependencies.svg";
-import packagesDependenciesFlowControl from "./diagrams/packagesDependenciesFlowControl.svg";
-
 import beach from "./diagrams/beach.jpg";
 import konyuhov1 from "./diagrams/konyuhov1.jpg";
 import konyuhov2 from "./diagrams/konyuhov2.jpg";
@@ -36,6 +28,15 @@ import konyuhov7 from "./diagrams/konyuhov7.jpg";
 import nakedInMountains from "./diagrams/nakedInMountains.jpg";
 
 import climbersBunch2 from "./diagrams/climbersBunch2.jpg";
+
+import packagesClient0 from "./diagrams/packagesClient0.svg";
+import packagesClient from "./diagrams/packagesClient.svg";
+import packages from "./diagrams/packages.svg";
+import packagesDependencies from "./diagrams/packagesDependencies.svg";
+import packagesDependenciesFlowControl from "./diagrams/packagesDependenciesFlowControl.svg";
+import layerModule from "./diagrams/layerModule.svg";
+
+import template from "./diagrams/template.svg";
 
 <Head>
   <title>Счётчик на Чистой Архитектуре</title>
@@ -195,6 +196,17 @@ import climbersBunch2 from "./diagrams/climbersBunch2.jpg";
 Это вариант, когда сервис является частью приложения, его backend-составляющей. 
 
 </Notes>
+
+---
+
+<Image src={layerModule} style={{ width: '102vw', height: '100vh'}}/>
+
+<Notes>
+
+... 
+
+</Notes>
+
 
 ---
 
