--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -34,7 +34,12 @@ import packagesClient from "./diagrams/packagesClient.svg";
 import packages from "./diagrams/packages.svg";
 import packagesDependencies from "./diagrams/packagesDependencies.svg";
 import packagesDependenciesFlowControl from "./diagrams/packagesDependenciesFlowControl.svg";
+
 import layerModule from "./diagrams/layerModule.svg";
+import layerModule1 from "./diagrams/layerModule1.svg";
+
+import caLayerModulesBase from "./diagrams/caLayerModulesBase.svg";
+import caLayerModulesBase1 from "./diagrams/caLayerModulesBase1.svg";
 
 import template from "./diagrams/template.svg";
 
@@ -203,10 +208,39 @@ import template from "./diagrams/template.svg";
 
 <Notes>
 
+Модуль слоя в принципе обычный модуль. 
+
+</Notes>
+
+---
+
+<Image src={layerModule1} style={{ width: '102vw', height: '100vh'}}/>
+
+<Notes>
+
 ... 
 
 </Notes>
 
+---
+
+<Image src={caLayerModulesBase} style={{ width: '102vw', height: '100vh'}}/>
+
+<Notes>
+
+... 
+
+</Notes>
+
+---
+
+<Image src={caLayerModulesBase1} style={{ width: '102vw', height: '100vh'}}/>
+
+<Notes>
+
+... 
+
+</Notes>
 
 ---
 
