feat: merge from srp

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -123,16 +123,17 @@ import template from "./diagrams/template.svg";
 ---
 
 # Счётчик на Чистой Архитектуре
-## Стартер
 
 ---
 
 # Главные свойства стартера
 
+---
+
 - *Clean Architecture*
 - *React*
 - *TypeScript*
-- *react-testing-library*
+- *React Testing Library*
 - *REST API*
 
 <Notes>
