feat: merge from srp

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -116,30 +116,62 @@ import template from "./diagrams/template.svg";
 
 ---
 
-![](https://avatars0.githubusercontent.com/u/58282225?s=400&u=1877c06c2227806421484a23980e2ca123e3fa32&v=4)
-
-![](https://avatars2.githubusercontent.com/u/47443457?s=400&u=dea74cc01b657d63400a5c36ea0b50975d7f7ef4&v=4)
-
----
-
-# Счётчик на Чистой Архитектуре
+<p style="font-size: 150px; text-align:center; padding:100px;">
+Счётчик на <i>Чистой Архитектуре</i>
+</p>
 
 ---
 
-# Главные свойства
+# Счётчик на *Чистой Архитектуре*
 
 ---
 
-- *Clean Architecture*
+# Cтартер клиентского приложения
+
+---
+
+# Его главные свойства
+
+---
+
+- *Чистая Архитектура*
+
+<Notes>
+
+Из принципов *Чистой Архитектуры*, здесь представлены все, кроме *Liskov Substitution Principle*, для которого, как
+минимум, нужно где-то использовать иерархию типов.
+
+</Notes>
+
+---
+
+- *Чистая Архитектура*
+- *React*
+
+---
+
+- *Чистая Архитектура*
+- *React*
+- *TypeScript*
+
+---
+
+- *Чистая Архитектура*
+- *React*
+- *TypeScript*
+- *React Testing Library*
+
+---
+
+- *Чистая Архитектура*
 - *React*
 - *TypeScript*
 - *React Testing Library*
 - *REST API*
 
-<Notes>
-Из свойств *Чистой Архитектуры* пока, наверное, только *Правило зависимостей*, реализуемое с использованием *Принципа
-Инверсии Зависимостей*, но это в ней главное.
-</Notes>
+---
+
+# Следование *Правилу Зависимостей*
 
 ---
 
@@ -157,6 +189,8 @@ import template from "./diagrams/template.svg";
 - adapters
   - presenters
   - gateways
+
+Самое время дать пояснения используемым названиям.
 
 </Notes>
 
@@ -266,7 +300,7 @@ import template from "./diagrams/template.svg";
 
 ---
 
-# Исходники этой презентации
+# Исходники
 
 [https://github.com/softspiders/ca-react-rest-api-starter](https://github.com/softspiders/ca-react-rest-api-starter)
 
