docs: add image

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -26,6 +26,7 @@ import konyuhov6 from "./diagrams/konyuhov6.jpg";
 import konyuhov61 from "./diagrams/konyuhov61.jpg";
 import konyuhov7 from "./diagrams/konyuhov7.jpg";
 import nakedInMountains from "./diagrams/nakedInMountains.jpg";
+import modulesCosmicStation from "./diagrams/modulesCosmicStation.jpg";
 
 import climbersBunch2 from "./diagrams/climbersBunch2.jpg";
 
@@ -172,6 +173,10 @@ import template from "./diagrams/template.svg";
 ---
 
 # Следование *Правилу Зависимостей*
+
+---
+
+<Image src={modulesCosmicStation} style={{ width: '60vw', height: '80vh'}}/>
 
 ---
 
