docs: add images

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -27,7 +27,8 @@ import konyuhov61 from "./diagrams/konyuhov61.jpg";
 import konyuhov7 from "./diagrams/konyuhov7.jpg";
 import nakedInMountains from "./diagrams/nakedInMountains.jpg";
 import modulesCosmicStation from "./diagrams/modulesCosmicStation.jpg";
-
+import caLayersUsual from "./diagrams/caLayersUsual.svg";
+ 
 import climbersBunch2 from "./diagrams/climbersBunch2.jpg";
 
 import packagesClient0 from "./diagrams/packagesClient0.svg";
@@ -177,6 +178,10 @@ import template from "./diagrams/template.svg";
 ---
 
 <Image src={modulesCosmicStation} style={{ width: '60vw', height: '80vh'}}/>
+
+---
+
+<Image src={caLayersUsual} style={{ width: '101vw', height: '100vh'}}/>
 
 ---
 
