--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -41,6 +41,8 @@ import layerModule from "./diagrams/layerModule.svg";
 import layerModule1 from "./diagrams/layerModule1.svg";
 
 import caLayerModulesBase from "./diagrams/caLayerModulesBase.svg";
+import caLayerModulesBaseRequired from "./diagrams/caLayerModulesBaseRequired.svg";
+
 import caLayerModulesBase1 from "./diagrams/caLayerModulesBase1.svg";
 
 import template from "./diagrams/template.svg";
@@ -270,6 +272,16 @@ import template from "./diagrams/template.svg";
 ---
 
 <Image src={caLayerModulesBase} style={{ width: '102vw', height: '100vh'}}/>
+
+<Notes>
+
+... 
+
+</Notes>
+
+---
+
+<Image src={caLayerModulesBaseRequired} style={{ width: '102vw', height: '100vh'}}/>
 
 <Notes>
 
