--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -27,7 +27,6 @@ import konyuhov61 from "./diagrams/konyuhov61.jpg";
 import konyuhov7 from "./diagrams/konyuhov7.jpg";
 import nakedInMountains from "./diagrams/nakedInMountains.jpg";
 import modulesCosmicStation from "./diagrams/modulesCosmicStation.jpg";
-import caLayersUsual from "./diagrams/caLayersUsual.svg";
  
 import climbersBunch2 from "./diagrams/climbersBunch2.jpg";
 
@@ -48,93 +47,22 @@ import caLayerModulesBase1 from "./diagrams/caLayerModulesBase1.svg";
 import template from "./diagrams/template.svg";
 
 <Head>
-  <title>Счётчик на Чистой Архитектуре</title>
+  <title>Стартер для Чистой Архитектуре</title>
 </Head>
 
 ---
 
-<Image src={beach} style={{ width: '30vw', height: '80vh'}}/>
-
----
-
-<Image src={konyuhov1} style={{ width: '30vw', height: '80vh'}}/>
-
-
----
-
-<Image src={konyuhov2} style={{ width: '70vw', height: '70vh'}}/>
-
----
-
-<Image src={konyuhov3} style={{ width: '55vw', height: '80vh'}}/>
-
----
-
-<Image src={konyuhov4} style={{ width: '60vw', height: '80vh'}}/>
-
----
-
-<Image src={konyuhov5} style={{ width: '70vw', height: '80vh'}}/>
-
----
-
-<Image src={konyuhov61} style={{ width: '30vw', height: '80vh'}}/>
-
----
-
-<Image src={konyuhov7} style={{ width: '30vw', height: '80vh'}}/>
-
----
-
-<CodeSurferColumns themes={[naiveTheme, naiveTheme]}>
-
-<Step>
-
-<Image src={konyuhov1} style={{ width: '30vw', height: '80vh'}}/>
-
-<Image src={konyuhov61} style={{ width: '30vw', height: '80vh'}}/>
-
-</Step>
-
-</CodeSurferColumns>
-
----
-
-<Image src={nakedInMountains} style={{ width: '60vw', height: '80vh'}}/>
-
----
-
-<Image src={climbersBunch2} style={{ width: '60vw', height: '80vh'}}/>
-
-<Notes>
-
-"Но мы выбираем трудный путь..."
-
-На самом деле он оптимальный.
-
-Что мы оптимизируем ?
-
-Масштабирование во времени - устойчивость развития.
-
-</Notes>
-
----
-
-<p style="font-size: 150px; text-align:center; padding:100px;">
-Счётчик на <i>Чистой Архитектуре</i>
+<p style="font-size: 150px; text-align:center; padding-bottom:200px;">
+<snap  style="font-size: 100px">Стартер для</snap>
+<br/>
+Чистой Архитектуры
 </p>
 
 ---
 
-# Счётчик на *Чистой Архитектуре*
-
----
-
-# Cтартер клиентского приложения
-
----
-
-# Его главные свойства
+<p style="font-size: 100px; text-align:center; padding-bottom:140px;">
+Главные свойства
+</p>
 
 ---
 
@@ -175,15 +103,15 @@ import template from "./diagrams/template.svg";
 
 ---
 
-# Следование *Правилу Зависимостей*
+<p style="font-size: 100px; text-align:center; padding-bottom:140px;">
+Правило зависимостей
+<br/>
+и модули
+</p>
 
 ---
 
-<Image src={modulesCosmicStation} style={{ width: '60vw', height: '80vh'}}/>
-
----
-
-<Image src={caLayersUsual} style={{ width: '101vw', height: '100vh'}}/>
+<Image src={modulesCosmicStation} style={{ width: '65vw', height: '950vh'}}/>
 
 ---
 
@@ -328,6 +256,12 @@ import template from "./diagrams/template.svg";
 
 ---
 
+# Полезные ссылки
+
+[Презентация по *Принципу Инверсии Зависимостей*](https://github.com/softspiders/dip-in-ca-deck)
+
+---
+
 # Вспомогательные материалы
 
 ---
@@ -337,3 +271,70 @@ import template from "./diagrams/template.svg";
 <Notes>
 Это шаблон слайда с заголовком и подписью
 </Notes>
+
+---
+
+<Image src={beach} style={{ width: '30vw', height: '80vh'}}/>
+
+---
+
+<Image src={konyuhov1} style={{ width: '30vw', height: '80vh'}}/>
+
+---
+
+<Image src={konyuhov2} style={{ width: '70vw', height: '70vh'}}/>
+
+---
+
+<Image src={konyuhov3} style={{ width: '55vw', height: '80vh'}}/>
+
+---
+
+<Image src={konyuhov4} style={{ width: '60vw', height: '80vh'}}/>
+
+---
+
+<Image src={konyuhov5} style={{ width: '70vw', height: '80vh'}}/>
+
+---
+
+<Image src={konyuhov61} style={{ width: '30vw', height: '80vh'}}/>
+
+---
+
+<Image src={konyuhov7} style={{ width: '30vw', height: '80vh'}}/>
+
+---
+
+<CodeSurferColumns themes={[naiveTheme, naiveTheme]}>
+
+<Step>
+
+<Image src={konyuhov1} style={{ width: '30vw', height: '80vh'}}/>
+
+<Image src={konyuhov61} style={{ width: '30vw', height: '80vh'}}/>
+
+</Step>
+
+</CodeSurferColumns>
+
+---
+
+<Image src={nakedInMountains} style={{ width: '60vw', height: '80vh'}}/>
+
+---
+
+<Image src={climbersBunch2} style={{ width: '60vw', height: '80vh'}}/>
+
+<Notes>
+
+"Но мы выбираем трудный путь..."
+
+На самом деле он оптимальный.
+
+Что мы оптимизируем ?
+
+Масштабирование во времени - устойчивость развития.
+
+</Notes>
+
