feat: update deck refactor: renaming

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -268,7 +268,21 @@ import template from "./diagrams/template.svg";
 
 <Step>
 
-```ts file=../../src/index.tsx title="Counter"
+```ts file=../../src/index.tsx title="index.tsx"
+```
+
+</Step>
+
+<Step>
+
+```ts file=../../src/ui/App.tsx title="App.tsx"
+```
+
+</Step>
+
+<Step>
+
+```ts file=../../src/ui/Counter.tsx title="Counter.tsx"
 ```
 
 </Step>
