--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -42,6 +42,7 @@ import layerModule1 from "./diagrams/layerModule1.svg";
 import caLayerModulesBase from "./diagrams/caLayerModulesBase.svg";
 import caLayerModulesBaseRequired from "./diagrams/caLayerModulesBaseRequired.svg";
 import caLayerModulesBase1 from "./diagrams/caLayerModulesBase1.svg";
+import caLayerModulesBase2 from "./diagrams/caLayerModulesBase2.svg";
 
 import counterResetModule from "./diagrams/counterResetModule.svg";
 import counterResetModuleImplementation from "./diagrams/counterResetModuleImplementation.svg";
@@ -105,7 +106,7 @@ import template from "./diagrams/template.svg";
 
 ---
 
-<p style="font-size: 100px; text-align:center; padding-bottom:140px;">
+<p style="font-size: 130px; text-align:center; padding-bottom:140px;">
 Правило зависимостей
 <br/>
 и модули
@@ -228,6 +229,17 @@ import template from "./diagrams/template.svg";
 ... 
 
 </Notes>
+
+---
+
+<Image src={caLayerModulesBase2} style={{ width: '102vw', height: '100vh'}}/>
+
+<Notes>
+
+... 
+
+</Notes>
+
 
 ---
 
