feat: translation to english

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -50,26 +50,26 @@ import counterResetModuleImplementation from "./diagrams/counterResetModuleImple
 import template from "./diagrams/template.svg";
 
 <Head>
-  <title>Стартер для Чистой Архитектуре</title>
+  <title>Starter for Clean Architecture</title>
 </Head>
 
 ---
 
 <p style="font-size: 150px; text-align:center; padding-bottom:200px;">
-<snap  style="font-size: 100px">Стартер для</snap>
+<snap  style="font-size: 100px">Starter for</snap>
 <br/>
-Чистой Архитектуры
+The Clean Architecture
 </p>
 
 ---
 
 <p style="font-size: 100px; text-align:center; padding-bottom:140px;">
-Главные свойства
+Key Features
 </p>
 
 ---
 
-- *Чистая Архитектура*
+- *Clean Architecture*
 
 <Notes>
 
@@ -80,25 +80,25 @@ import template from "./diagrams/template.svg";
 
 ---
 
-- *Чистая Архитектура*
+- *Clean Architecture*
 - *React*
 
 ---
 
-- *Чистая Архитектура*
+- *Clean Architecture*
 - *React*
 - *TypeScript*
 
 ---
 
-- *Чистая Архитектура*
+- *Clean Architecture*
 - *React*
 - *TypeScript*
 - *React Testing Library*
 
 ---
 
-- *Чистая Архитектура*
+- *Clean Architecture*
 - *React*
 - *TypeScript*
 - *React Testing Library*
@@ -107,9 +107,9 @@ import template from "./diagrams/template.svg";
 ---
 
 <p style="font-size: 130px; text-align:center; padding-bottom:140px;">
-Правило зависимостей
+Dependency Rule
 <br/>
-и модули
+and modules
 </p>
 
 ---
@@ -311,15 +311,15 @@ import template from "./diagrams/template.svg";
 
 ---
 
-# Исходники
+# Sources
 
 [https://github.com/softspiders/ca-react-rest-api-starter](https://github.com/softspiders/ca-react-rest-api-starter)
 
 ---
 
-# Полезные ссылки
+# Useful materials
 
-[Презентация по *Принципу Инверсии Зависимостей*](https://github.com/softspiders/dip-in-ca-deck)
+[*Dependency Inversion Principle* presentation](https://github.com/softspiders/dip-in-ca-deck)
 
 ---
 
