feat: translation to english

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -107,6 +107,15 @@ Key Features
 ---
 
 <p style="font-size: 130px; text-align:center; padding-bottom:140px;">
+<i>Clean Architecture</i>
+<br/> 
+and frontend
+</p>
+
+
+---
+
+<p style="font-size: 130px; text-align:center; padding-bottom:140px;">
 Dependency Rule
 <br/>
 and modules
@@ -303,7 +312,7 @@ and modules
 
 ---
 
-# СПАСИБО ЗА ВНИМАНИЕ!
+# THANK YOU!
 
 ---
 
@@ -398,4 +407,3 @@ and modules
 Масштабирование во времени - устойчивость развития.
 
 </Notes>
-
