--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -55,11 +55,21 @@ import template from "./diagrams/template.svg";
 
 ---
 
-<p style="font-size: 150px; text-align:center; padding-bottom:200px;">
-<snap  style="font-size: 100px">Starter for</snap>
-<br/>
+<p style="font-size: 150px; text-align:center; padding-bottom:140px;">
+Starter for
+</p>
+
+---
+
+<p style="font-size: 150px; text-align:center; padding-bottom:80px;">
 The Clean Architecture
 </p>
+
+<Notes>
+
+От аудитории необходимо хотя бы минимальное предварительное понимание, для чего вообще нужна *Чистая Архитектура*.
+
+</Notes>
 
 ---
 
@@ -70,6 +80,22 @@ Key Features
 ---
 
 - *Clean Architecture*
+
+<Notes>
+
+Из принципов *Чистой Архитектуры*, здесь представлены все, кроме *Liskov Substitution Principle*, для которого, как
+минимум, нужно где-то использовать иерархию типов. Минималистичность предлагаемой предметной области не позволяет это
+сделать. 
+
+</Notes>
+
+---
+
+- *Clean Architecture*
+  - *Single Responsibility Principle*
+  - *Open-Closed Principle*
+  - *Interface Segregation Principle*
+  - *Dependency Inversion Principle*
 
 <Notes>
 
@@ -112,6 +138,9 @@ Key Features
 and frontend
 </p>
 
+---
+
+# Terminology
 
 ---
 
