docs: deck update

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -144,6 +144,24 @@ and frontend
 # Terminology
 
 ---
+- Domain
+  - Entities (enterprise)
+  - Use Cases (business logic, services)
+- Adapters 
+  - gateways (repositories)
+  - presenters
+- UI (frameworks)
+- Backend frameworks
+- DB
+
+<Notes>
+
+The most typical scheme...
+Layers of reusability...
+
+</Notes>
+
+---
 
 <p style="font-size: 130px; text-align:center; padding-bottom:140px;">
 Dependency Rule
