docs: deck update

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -120,6 +120,7 @@ Key Features
 - *Clean Architecture*
   - *Single Responsibility Principle*
   - *Open-Closed Principle*
+  - ~~*Liskov Substitution Principle*~~
   - *Interface Segregation Principle*
   - *Dependency Inversion Principle*
 
@@ -134,7 +135,7 @@ Key Features
 ---
 
 <p style="font-size: 130px; text-align:center; padding-bottom:140px;">
-<i>Clean Architecture</i>
+Clean Architecture
 <br/> 
 and frontend
 </p>
