docs: deck update

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -57,7 +57,15 @@ import template from "./diagrams/template.svg";
 
 <p style="font-size: 150px; text-align:center; padding-bottom:140px;">
 Starter for
+<br/>
+Client Applications on
 </p>
+
+<Notes>
+
+В этой презентации будет рассказано о стартере для клиентских приложений, разрабатываемых на
+...
+</Notes>
 
 ---
 
@@ -66,8 +74,21 @@ The Clean Architecture
 </p>
 
 <Notes>
+...
+принципах *Чистой Архитектуры*.
 
-От аудитории необходимо хотя бы минимальное предварительное понимание, для чего вообще нужна *Чистая Архитектура*.
+Несмотря на то, что предметная область и, соответственно, бизнес-логика стартера предельно минималистичны - это
+простейший счётчик с функциями инкремента и сброса, рассмотрение всех нужных аспектов трудно уместить в одной
+презентации.  
+
+Поэтому будет показано только наболее существенное, а именно, как принципы *Чистой Архитектуры* могут быть
+представлены в коде языка, поддерживающего понятие интерфейса. А поскольку здесь рассматривается специфика клиентских
+приложений, то для этого лучше всего подойдёт *TypeScript*. 
+
+От аудитории необходимо хотя бы минимальное предварительное понимание существа проблем, решаемых *Чистой Архитектурой*.
+
+Ну а для тех, кто впервые слышит это словосочетание, сформулируем кратко: принципы *Чистой Архитектуры* направлены на
+обеспечение долгого и устойчивого развития программного продукта.  
 
 </Notes>
 
