docs: deck update

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -86,10 +86,11 @@ On the Clean Architecture
 представлены в коде языка, поддерживающего понятие интерфейса. А поскольку здесь рассматривается специфика клиентских
 приложений, то для этого лучше всего подойдёт *TypeScript*. 
 
-От аудитории необходимо хотя бы минимальное предварительное понимание существа проблем, решаемых *Чистой Архитектурой*.
+От аудитории желательно присутствие хотя бы минимального предварительного понимания существа проблем, решаемых *Чистой
+Архитектурой*.
 
-Ну а для тех, кто словосочетание  *Чистая Архитектура* слышит впервые, сформулируем кратко: принципы *Чистой
-Архитектуры* направлены на обеспечение долгого и устойчивого развития программного продукта.  
+Ну а для тех, кому эта тема совсем незнакома, сформулируем кратко: принципы *Чистой Архитектуры* направлены на
+обеспечение долгого и устойчивого развития программного продукта.  
 
 </Notes>
 
@@ -181,23 +182,23 @@ Key Features
 ---
 
 - *Clean Architecture*
-  - *Single Responsibility Principle (SRP)*
-  - *Open-Closed Principle (OCP)*
-  - ~~*Liskov Substitution Principle (LSP)*~~
-  - *Interface Segregation Principle (ISP)*
-  - *Dependency Inversion Principle (DIP)*
+  - <i style="color:#33FF33">Single Responsibility Principle (SRP)</i>
+  - <i style="color:#33FF33">Open-Closed Principle (OCP)</i>
+  - <i style="color:#FF0000">Liskov Substitution Principle (LSP)</i>
+  - <i style="color:#33FF33">Interface Segregation Principle (ISP)</i>
+  - <i style="color:#33FF33">Dependency Inversion Principle (DIP)</i>
 
 <Notes>
 
-Из принципов *Чистой Архитектуры* - как известно, это принципы *SOLID*, здесь представлены все, кроме *Liskov
-Substitution Principle*, для которого, как минимум, необходимо использование иерархию типов.
-Но минималистичность предлагаемой предметной области не позволяет это сделать.
+Из принципов *Чистой Архитектуры* - как известно, это принципы *SOLID*, здесь представлены, пожалуй, все, кроме *Liskov
+Substitution Principle*, для применения которого необходимо, как минимум, присутствие иерархии типов.
+Но минималистичность предлагаемой предметной области в данном случае не позволяет это сделать.
 
 Отдельным интересным вопросом является обоснование необходимости и достаточности принципов *SOLID*. Например, существуют
 небезосновательные мнения, к которым склонен присоединиться и автор, что эти принципы не лишены избыточности.
 
 Какие-то из них, такие как *SRP*, *DIP* и *LSP*, являются главными, первичными, в то время как остальные - производными,
-вторичными, возможно, добавленными, так сказать, "для красного словца" - для получения красивой аббревиатуры.
+вторичными, возможно, добавленными или оставленными для получения красивой аббревиатуры.
 
 Но здесь не об этом.  
 
@@ -449,7 +450,7 @@ and modules
 
 # Useful materials
 
-[*Dependency Inversion Principle* presentation](https://github.com/softspiders/dip-in-ca-deck)
+[*Dependency Inversion Principle* presentation](https://csb-9kg5y-8d0n41fyp.now.sh)
 
 ---
 
