docs: deck update

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -82,9 +82,11 @@ On the Clean Architecture
 простейший счётчик с функциями инкремента и сброса, рассмотрение всех нужных аспектов трудно уместить в одной
 презентации.  
 
-Поэтому будет показано только наболее существенное, а именно, как принципы *Чистой Архитектуры* могут быть
+Поэтому будет показано только наболее существенное, а именно то, как принципы *Чистой Архитектуры* могут быть
 представлены в коде языка, поддерживающего понятие интерфейса. А поскольку здесь рассматривается специфика клиентских
-приложений, то для этого лучше всего подойдёт *TypeScript*. 
+приложений, то сегодня для этого лучше всего подойдёт *TypeScript*, язык, уже имеющий многочисленных сторонников в среде
+frontend-разработчиков, и который последнее время начинает завоёвывать позиции также и на backend
+([*NestJS*](https://nestjs.com/) и т.п.). 
 
 От аудитории желательно присутствие хотя бы минимального предварительного понимания существа проблем, решаемых *Чистой
 Архитектурой*.
