docs: deck update

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -55,6 +55,32 @@ import template from "./diagrams/template.svg";
 
 ---
 
+# How to perceive this presentation
+
+<Notes>
+
+Как смотреть эту презентацию
+...
+</Notes>
+
+---
+
+# Speaker notes
+
+- *Alt+P* - on Windows
+- *Option+P* - on Mac
+
+<Notes>
+
+Эту презентацию можно будет повторно пересмотреть-перечитать в режиме докладчика, при котором одновременно виден слайд и
+сопровождающий его текст.
+
+Режим докладчика включается комбинацией клавиш *Alt+P* - на Windows и *Option+P* - на Mac.
+
+</Notes>
+
+---
+
 <p style="font-size: 150px; text-align:center; padding-bottom:140px;">
 Starter for
 <br/>
@@ -197,10 +223,11 @@ Substitution Principle*, для применения которого необх
 Но минималистичность предлагаемой предметной области в данном случае не позволяет это сделать.
 
 Отдельным интересным вопросом является обоснование необходимости и достаточности принципов *SOLID*. Например, существуют
-небезосновательные мнения, к которым склонен присоединиться и автор, что эти принципы не лишены избыточности.
+[небезосновательные мнения](https://accu.org/index.php/journals/1957), к которым склонен присоединиться и автор, что эти
+принципы не лишены избыточности.
 
-Какие-то из них, такие как *SRP*, *DIP* и *LSP*, являются главными, первичными, в то время как остальные - производными,
-вторичными, возможно, добавленными или оставленными для получения красивой аббревиатуры.
+Какие-то из них, такие как *SRP*, *DIP* и *LSP* - главные, первичные, в то время как остальные - производные, вторичные,
+присутствие которых может быть оправдано понятным желанием получить красивую аббревиатуру.
 
 Но здесь не об этом.  
 
