docs: deck update

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -110,15 +110,13 @@ On the Clean Architecture
 
 Поэтому будет показано только наболее существенное, а именно то, как принципы *Чистой Архитектуры* могут быть
 представлены в коде языка, поддерживающего понятие интерфейса. А поскольку здесь рассматривается специфика клиентских
-приложений, то сегодня для этого лучше всего подойдёт *TypeScript*, язык, уже имеющий многочисленных сторонников в среде
-frontend-разработчиков, и который последнее время начинает завоёвывать позиции также и на backend
-([*NestJS*](https://nestjs.com/) и т.п.). 
+приложений, то сегодня для этой цели лучше всего подойдёт *TypeScript*, язык, который в среде frontend-разработчиков
+имеет многочисленных сторонников, и который последнее время начинает завоёвывать позиции уже и на backend (см., например,
+[*NestJS*](https://nestjs.com/)). 
 
 От аудитории желательно присутствие хотя бы минимального предварительного понимания существа проблем, решаемых *Чистой
-Архитектурой*.
-
-Ну а для тех, кому эта тема совсем незнакома, сформулируем кратко: принципы *Чистой Архитектуры* направлены на
-обеспечение долгого и устойчивого развития программного продукта.  
+Архитектурой*. Ну а для тех, кому эта тема совсем незнакома, сформулируем кратко: принципы *Чистой Архитектуры*
+направлены на обеспечение долгого и устойчивого развития программного продукта.  
 
 </Notes>
 
