docs: deck update

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -27,6 +27,8 @@ import konyuhov61 from "./diagrams/konyuhov61.jpg";
 import konyuhov7 from "./diagrams/konyuhov7.jpg";
 import nakedInMountains from "./diagrams/nakedInMountains.jpg";
 import modulesCosmicStation from "./diagrams/modulesCosmicStation.jpg";
+import legoModules from "./diagrams/legoModules.png";
+
  
 import climbersBunch2 from "./diagrams/climbersBunch2.jpg";
 
@@ -272,7 +274,23 @@ and modules
 
 ---
 
-<Image src={modulesCosmicStation} style={{ width: '65vw', height: '950vh'}}/>
+<CodeSurferColumns themes={[naiveTheme, naiveTheme]}>
+
+<Step>
+
+<Image src={modulesCosmicStation} style={{ width: '100vw', height: '70vh'}}/>
+
+<Image src={legoModules} style={{ width: '30vw', height: '70vh'}}/>
+
+</Step>
+
+</CodeSurferColumns>
+
+<Notes>
+
+Что общего ?
+
+</Notes>
 
 ---
 
