docs: deck update

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -118,7 +118,8 @@ On the Clean Architecture
 
 От аудитории желательно присутствие хотя бы минимального предварительного понимания существа проблем, решаемых *Чистой
 Архитектурой*. Ну а для тех, кому эта тема совсем незнакома, сформулируем кратко: принципы *Чистой Архитектуры*
-направлены на обеспечение долгого и устойчивого развития программного продукта.  
+направлены на обеспечение долгого и устойчивого развития программного продукта - его, если так можно выразиться,
+"масштабируемость во времени".  
 
 </Notes>
 
