docs: deck update

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -59,20 +59,24 @@ import template from "./diagrams/template.svg";
 
 # How to perceive this presentation
 
+<p style="font-size: 50px; text-align:left; padding-bottom:200px;">
+    <ul>
+        <li><i>Speaker notes</i> mode</li>
+        <ul>
+            <li><i>Alt+P</i> - on Windows</li>
+            <li><i>Option+P</i> - on Mac</li>
+        </ul>
+        <li><i>Speaker notes</i> mode</li>
+        <ul>
+            <li><i>F11</i> - fullscreen mode enabling</li>
+            <li><i>Ctrl + '-/+'</i> - font size tuning</li>
+        </ul>
+    </ul>
+</p>
+
 <Notes>
 
 Как смотреть эту презентацию
-...
-</Notes>
-
----
-
-# Speaker notes
-
-- *Alt+P* - on Windows
-- *Option+P* - on Mac
-
-<Notes>
 
 Эту презентацию можно будет повторно пересмотреть-перечитать в режиме докладчика, при котором одновременно виден слайд и
 сопровождающий его текст.
