docs: deck update

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -95,7 +95,7 @@ Client Applications
 
 <Notes>
 
-В этой презентации будет рассказано о стартере для клиентских приложений, разрабатываемых на
+В этой презентации будет рассказано о стартере для клиентских приложений, разрабатываемых
 ...
 </Notes>
 
@@ -108,15 +108,15 @@ On the Clean Architecture
 <Notes>
 ...
 
-принципах *Чистой Архитектуры*.
+на принципах *Чистой Архитектуры*.
 
 Несмотря на то, что предметная область и, соответственно, бизнес-логика стартера предельно минималистичны - это
 простейший счётчик с функциями инкремента и сброса, рассмотрение всех нужных аспектов трудно уместить в одной
 презентации.  
 
-Поэтому будет показано только наболее существенное, а именно то, как принципы *Чистой Архитектуры* могут быть
+Поэтому будет показано только наиболее существенное, а именно то, как принципы *Чистой Архитектуры* могут быть
 представлены в коде языка, поддерживающего понятие интерфейса. А поскольку здесь рассматривается специфика клиентских
-приложений, то сегодня для этой цели лучше всего подойдёт *TypeScript*, язык, который в среде frontend-разработчиков
+приложений, то для этой цели лучше всего подойдёт *TypeScript*, язык, который в среде frontend-разработчиков уже сегодня
 имеет многочисленных сторонников, и который последнее время начинает завоёвывать позиции уже и на backend (см., например,
 [*NestJS*](https://nestjs.com/)). 
 
@@ -231,7 +231,7 @@ Substitution Principle*, для применения которого необх
 [небезосновательные мнения](https://accu.org/index.php/journals/1957), к которым склонен присоединиться и автор, что эти
 принципы не лишены избыточности.
 
-Какие-то из них, такие как *SRP*, *DIP* и *LSP* - главные, первичные, в то время как остальные - производные, вторичные,
+Какие-то из них, такие, как *SRP*, *DIP* и *LSP* - главные, первичные, в то время как остальные - производные, вторичные,
 присутствие которых может быть оправдано понятным желанием получить красивую аббревиатуру.
 
 Но здесь не об этом.  
@@ -303,7 +303,7 @@ and modules
 
 <Notes>
 
-Здесь изображена структура директорий (packages) клиенского приложения, вполне обычная при разработке на принципах
+Здесь изображена структура директорий (packages) клиентского приложения, вполне обычная при разработке на принципах
 Чистой Архитектуры.
 
 - domain
